--- a/app/src/main/res/menu/post.xml
+++ b/app/src/main/res/menu/post.xml
@@ -20,9 +20,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_open_in_browser"
+        android:orderInCategory="1"
+        android:title="@string/open_in_browser"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_see_like_page"
         android:checkable="true"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/see_like_page"
         app:showAsAction="never" />
 
