--- a/app/src/main/res/menu/preview.xml
+++ b/app/src/main/res/menu/preview.xml
@@ -20,20 +20,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_refresh"
         android:orderInCategory="1"
+        android:title="@string/action_refresh"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="2"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_about"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/about"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_night"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         android:title="@string/menu_night_mode"
         app:showAsAction="never">
 
