--- a/app/src/main/res/layout/without_network.xml
+++ b/app/src/main/res/layout/without_network.xml
@@ -12,11 +12,13 @@
         android:layout_width="62dp"
         android:layout_height="62dp"
         android:contentDescription="@string/app_name"
-        android:src="@mipmap/ic_network_off" />
+        android:src="@mipmap/ic_network_off"
+        android:tint="@color/colorAccent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/without_connection" />
+        android:text="@string/without_connection"
+        android:textColor="@color/colorAccent" />
 
 </LinearLayout>
