--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -24,7 +24,7 @@
     android:orientation="vertical">
 
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/screens"
@@ -70,8 +70,9 @@
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/screens"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -97,7 +98,7 @@
                 <WebView
                     android:id="@+id/webView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:isScrollContainer="false"
                     android:visibility="gone" />
