--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -88,12 +88,13 @@
                 android:background="@color/screens"
                 android:orientation="vertical">
 
-                <com.uncopt.android.widget.text.justify.JustifiedTextView
+                <TextView
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/spacing_xxxlarge"
                     android:background="@color/screens"
+                    android:gravity="center_vertical|start"
                     android:paddingBottom="@dimen/spacing_xlarge"
                     android:paddingEnd="@dimen/spacing_medium"
                     android:paddingLeft="@dimen/spacing_medium"
@@ -101,13 +102,12 @@
                     android:paddingStart="@dimen/spacing_medium"
                     android:textAppearance="@android:style/TextAppearance.Medium" />
 
-                <WebView
-                    android:id="@+id/webView"
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:isScrollContainer="false"
-                    android:visibility="gone" />
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
