--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,8 @@
 
     <color name="black_overlay">#66000000</color>
 
+    <color name="transparent">#00000000</color>
+
     <!--
         100% — FF
         95% — F2
