--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -43,7 +43,7 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:collapsedTitleTextAppearance="@style/CollapsingToolbarLayout.NoTitle"
-                app:contentScrim="?attr/colorPrimary"
+                app:contentScrim="@color/colorAccentInverseDark"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
                 app:expandedTitleTextAppearance="@style/CollapsingToolbarLayout.NoTitle"
@@ -61,7 +61,7 @@
                         android:contentDescription="@string/app_name"
                         android:fitsSystemWindows="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/preview_background"
+                        android:src="@drawable/gray_background"
                         app:layout_collapseMode="parallax" />
 
                     <LinearLayout
@@ -88,7 +88,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/spacing_large"
                             android:text="@string/app_name"
-                            android:textAppearance="@android:style/TextAppearance.Medium"
+                            android:textAppearance="@android:style/TextAppearance.Large"
                             android:textStyle="bold" />
 
                         <TextView
@@ -97,7 +97,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/spacing_small"
                             android:text="@string/app_name"
-                            android:textAppearance="@android:style/TextAppearance.Small"
+                            android:textAppearance="@android:style/TextAppearance.Medium"
                             android:textStyle="bold" />
 
                     </LinearLayout>
