--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,8 +22,8 @@
     <color name="colorPrimaryLight">#64B5F6</color>
     <color name="colorPrimaryDark">#2962FF</color>
     <color name="colorAccent">#616161</color>
-    <color name="colorAccentInverse">#EEEEEE</color>
-    <color name="colorAccentInverseDark">#BDBDBD</color>
+    <color name="colorAccentInverse">#F5F5F5</color>
+    <color name="colorAccentInverseDark">#FAFAFA</color>
 
     <color name="screens">#F5F5F5</color>
     <color name="white">#FFF</color>
