--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -381,6 +381,28 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/openSourceLicenses"
+                style="@style/AppTheme.SettingsItem"
+                android:background="@drawable/selectable_item_background"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <ImageView
+                    style="@style/AppTheme.SettingsItemImageView"
+                    android:src="@mipmap/ic_action_action_announcement" />
+
+                <TextView
+                    style="@style/AppTheme.SettingsItemTitleTextView"
+                    android:layout_width="0dp"
+                    android:layout_marginLeft="@dimen/spacing_xlarge"
+                    android:layout_marginStart="@dimen/spacing_xlarge"
+                    android:layout_weight="9"
+                    android:text="@string/open_source_licenses" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </ScrollView>
