--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -86,7 +86,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/screens"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingEnd="@dimen/spacing_medium"
+                android:paddingLeft="@dimen/spacing_medium"
+                android:paddingRight="@dimen/spacing_medium"
+                android:paddingStart="@dimen/spacing_medium">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/spacing_xxxlarge"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/titleView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|start"
+                        android:textAppearance="@android:style/TextAppearance.Medium" />
+
+                    <TextView
+                        android:id="@+id/infoView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|start"
+                        android:textAppearance="@android:style/TextAppearance.Small" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/textView"
@@ -96,11 +122,7 @@
                     android:background="@color/screens"
                     android:gravity="center_vertical|start"
                     android:paddingBottom="@dimen/spacing_xlarge"
-                    android:paddingEnd="@dimen/spacing_medium"
-                    android:paddingLeft="@dimen/spacing_medium"
-                    android:paddingRight="@dimen/spacing_medium"
-                    android:paddingStart="@dimen/spacing_medium"
-                    android:textAppearance="@android:style/TextAppearance.Medium" />
+                    android:textAppearance="@android:style/TextAppearance.Small" />
 
                 <View
                     android:layout_width="match_parent"
