--- a/app/src/main/res/layout/about_body.xml
+++ b/app/src/main/res/layout/about_body.xml
@@ -20,7 +20,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/screens"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
