--- a/app/src/main/res/drawable/selectable_item_background.xml
+++ b/app/src/main/res/drawable/selectable_item_background.xml
@@ -18,8 +18,8 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/light_gray" android:state_pressed="true" />
+    <item android:drawable="@color/touch_background" android:state_pressed="true" />
 
-    <item android:drawable="@android:color/transparent" />
+    <item android:drawable="@color/transparent" />
 
 </selector>
