--- a/app/src/main/res/drawable-v21/selectable_item_background.xml
+++ b/app/src/main/res/drawable-v21/selectable_item_background.xml
@@ -21,6 +21,6 @@
 
     <item
         android:id="@android:id/mask"
-        android:drawable="@color/dark_gray" />
+        android:drawable="@color/touch_background" />
 
 </ripple>
