--- a/app/src/main/res/menu/post.xml
+++ b/app/src/main/res/menu/post.xml
@@ -25,4 +25,11 @@
         android:title="@string/open_in_browser"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_enable_auto_scroll"
+        android:checkable="true"
+        android:orderInCategory="2"
+        android:title="@string/enable_auto_scroll_on_posts"
+        app:showAsAction="never" />
+
 </menu>
